End of .Net Summer Training ITI and Apply N-Tier Architechure

--- a/ITITaskMVC/appsettings.json
+++ b/ITITaskMVC/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "constr": "Server= DESKTOP-1BDDKID ; Database =ITIMVC;Integrated Security = SSPI ; TrustServerCertificate = True "
+    },
+    "CourseSettings": {
+        "DefaultPageSize": 2
     }
-  },
-  "AllowedHosts": "*"
 }
